# INT2215

./: .gitignore  2048.cpp  2048.vcxproj  README.md
2048/: 2048.sln
2048/2048/: 2048.cpp  2048.vcxproj  CMakeLists.txt  build.bat
